fixed font awesome align

--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -4,6 +4,9 @@ html,body.home {
 .soon {
 	bottom: 0;
 }
+.subscribe {
+	vertical-align: 2px !important;
+}
 .intro {
 	background-image: url('../img/bitfyreGlitch.gif');
 	background-repeat: no-repeat;
